2005-03-13	Benedikt Meurer <benny@xfce.org>
	* HACKING: Add several missing points to the Release process.
	* configure.ac: Bump version to 0.3.1svn.




(Old svn revision: 16574)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-03-13	Benedikt Meurer <benny@xfce.org>
 
+	* HACKING: Add several missing points to the Release process.
+	* configure.ac: Bump version to 0.3.1svn.
+
+2005-03-13	Benedikt Meurer <benny@xfce.org>
+
 	* configure.ac, NEWS: Version 0.3.0.
 	* docs/reference/exo-docs.sgml: Update date.
 	* po/: Run "make update-po".
