--- a/HACKING
+++ b/HACKING
@@ -56,5 +56,11 @@ Release process
       "svn copy https://os-cillation.de:8080/repos/libexo/trunk \
          https://os-cillation.de:8080/repos/libexo/tags/release-X.Y.Z"
      where X.Y.Z is the version number.
- 10) upload the tarball to os-cillation ftp
- 11) Update freshmeat entry.
+ 10) Upload the tarballs to os-cillation ftp
+ 11) Upload the tarballs to os-works
+ 12) Upload the tarballs to Berlios
+ 13) Create a new release at Berlios
+ 14) Upload the new online documentation (to both .com and .de).
+ 15) Update the os-cillation website (don't forget the Download section)
+ 16) Adjust the documentation link on xfce.org/documentation/ if necessary.
+ 17) Update freshmeat entry.
