2005-03-17	Benedikt Meurer <benny@xfce.org>
	* configure.ac, po/ja.po, THANKS, NEWS: Add ja translations, thanks to
	  Daichi Kawahata <daichik@users.sourceforge.net>.
	* docs/reference/tmpl/*.sgml: Regenerate with updated gtk-doc.




(Old svn revision: 16575)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-17	Benedikt Meurer <benny@xfce.org>
+
+	* configure.ac, po/ja.po, THANKS, NEWS: Add ja translations, thanks to
+	  Daichi Kawahata <daichik@users.sourceforge.net>.
+	* docs/reference/tmpl/*.sgml: Regenerate with updated gtk-doc.
+
 2005-03-13	Benedikt Meurer <benny@xfce.org>
 
 	* HACKING: Add several missing points to the Release process.
