--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+0.3.1svn
+========
+- New translations: Daichi Kawahata (ja)
+
+
 0.3.0
 =====
 - The icon bar is now sized and rendered properly with all Gtk+ theme engines.
