--- a/THANKS
+++ b/THANKS
@@ -1,2 +1,5 @@
 Dwayne Bailey <dwayne@translate.org.za>
  * en_GB translations
+
+Daichi Kawahata <daichik@users.sourceforge.net>
+ * ja translations
