2005-05-29	Benedikt Meurer <benny@xfce.org>
	* exo/exo-mime-database.h: Fix missing function declaration.




(Old svn revision: 16577)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-05-29	Benedikt Meurer <benny@xfce.org>
 
+	* exo/exo-mime-database.h: Fix missing function declaration.
+
+2005-05-29	Benedikt Meurer <benny@xfce.org>
+
 	* exo/xdgmime/: Import the xdgmime module from freedesktop.org.
 	* exo/exo-mime-info.{c,h}, exo/exo-mime-database.{c,h}: Add two new
 	  classes ExoMimeDatabase and ExoMimeInfo to provide a high-level
