--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-30	Benedikt Meurer <benny@xfce.org>
+
+	* exo/Makefile.am: We don't use D-Bus any longer, so no need to keep
+	  that define around.
+
 2005-05-29	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-mime-database.h: Fix missing function declaration.
