--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-04	Benedikt Meurer <benny@xfce.org>
 
+	* exo/exo-mime-database.c: Run the reload signal at the highest
+	  priority.
+
+2005-06-04	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-mime-database.h: Fix indentation.
 	* exo/exo-mime-database.c (exo_mime_database_get_info): The
 	  ExoMimeDatabase instance takes a reference on every returned
