2005-06-11	Benedikt Meurer <benny@xfce.org>
	* configure.ac, po/es.po, THANKS: Add spanish translations from
	  Patricio Carr <pato@patocarr.com>.




(Old svn revision: 16585)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-11	Benedikt Meurer <benny@xfce.org>
+
+	* configure.ac, po/es.po, THANKS: Add spanish translations from
+	  Patricio Carr <pato@patocarr.com>.
+
 2005-06-08	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac: Check for libintl.h as well.
