--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,8 @@
 Dwayne Bailey <dwayne@translate.org.za>
  * en_GB translations
 
+Patricio Carr <pato@patocarr.com>
+ * es translations
+
 Daichi Kawahata <daichik@users.sourceforge.net>
  * ja translations
