2005-06-11	Benedikt Meurer <benny@xfce.org>
	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.




(Old svn revision: 16586)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-06-11	Benedikt Meurer <benny@xfce.org>
 
+	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
+	  <daichik@users.sourceforge.net>.
+
+2005-06-11	Benedikt Meurer <benny@xfce.org>
+
 	* configure.ac, po/es.po, THANKS: Add spanish translations from
 	  Patricio Carr <pato@patocarr.com>.
 
