--- a/po/ja.po
+++ b/po/ja.po
@@ -1,16 +1,16 @@
-# Japanese translations for exo package
-# Copyright (C) 2004-2005 Benedikt Meurer
+# Japanese translations for exo package.
+# Copyright (C) 2004-2005, os-cillation.
 # This file is distributed under the same license as the exo package.
 # Daichi Kawahata <daichik@users.sourceforge.net>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.0pre1\n"
+"Project-Id-Version: exo 0.3.1svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-03-02 20:07+0100\n"
-"PO-Revision-Date: 2005-03-17 08:42+0900\n"
+"POT-Creation-Date: 2005-04-06 12:41+0900\n"
+"PO-Revision-Date: 2005-04-18 15:38+0900\n"
 "Last-Translator: Daichi Kawahata <daichik@users.sourceforge.net>\n"
-"Language-Team: Japanese <translation-team-ja@lists.sourceforge.net>\n"
+"Language-Team: xfce-users-jp <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -65,31 +65,31 @@ msgstr "アクティブ"
 
 #: exo/exo-icon-bar.c:297
 msgid "Active item index"
-msgstr "アクティブアイテムのインデックス"
+msgstr "アクティブ・アイテムのインデックス"
 
 #: exo/exo-icon-bar.c:303 exo/exo-icon-bar.c:304
 msgid "Active item fill color"
-msgstr "アクティブアイテムの塗潰し色"
+msgstr "アクティブ・アイテムの塗潰し色"
 
 #: exo/exo-icon-bar.c:310 exo/exo-icon-bar.c:311
 msgid "Active item border color"
-msgstr "アクティブアイテムの枠の色"
+msgstr "アクティブ・アイテムの枠の色"
 
 #: exo/exo-icon-bar.c:317 exo/exo-icon-bar.c:318
 msgid "Active item text color"
-msgstr "アクティブアイテムの文字色"
+msgstr "アクティブ・アイテムの文字色"
 
 #: exo/exo-icon-bar.c:324 exo/exo-icon-bar.c:325
 msgid "Cursor item fill color"
-msgstr "カーソルアイテムの塗潰し色"
+msgstr "カーソル・アイテムの塗潰し色"
 
 #: exo/exo-icon-bar.c:331 exo/exo-icon-bar.c:332
 msgid "Cursor item border color"
-msgstr "カーソルアイテムの枠の色"
+msgstr "カーソル・アイテムの枠の色"
 
 #: exo/exo-icon-bar.c:338 exo/exo-icon-bar.c:339
 msgid "Cursor item text color"
-msgstr "カーソルアイテムの文字色"
+msgstr "カーソル・アイテムの文字色"
 
 #: exo/exo-icon-view.c:314
 msgid "Selection mode"
@@ -106,7 +106,7 @@ msgstr "マークアップ欄"
 #: exo/exo-icon-view.c:366
 msgid "Model column used to retrieve the text if using Pango markup"
 msgstr ""
-"Pango のマックアップが使用されている場合に文字を取得するためのモデル欄です"
+"Pango のマークアップが使用されている場合に文字を取得するためのモデル欄です"
 
 #: exo/exo-icon-view.c:373
 msgid "Icon View Model"
