2005-06-13	Benedikt Meurer <benny@xfce.org>
	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.
	* configure.ac, THANKS, po/fr.po: Add french translations, thanks to
	  Stephane Roy <sroy@j2n.net>.




(Old svn revision: 16587)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-13	Benedikt Meurer <benny@xfce.org>
+
+	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
+	  <daichik@users.sourceforge.net>.
+	* configure.ac, THANKS, po/fr.po: Add french translations, thanks to
+	  Stephane Roy <sroy@j2n.net>.
+
 2005-06-11	Benedikt Meurer <benny@xfce.org>
 
 	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
