--- a/THANKS
+++ b/THANKS
@@ -4,5 +4,8 @@ Dwayne Bailey <dwayne@translate.org.za>
 Patricio Carr <pato@patocarr.com>
  * es translations
 
+Stephane Roy <sroy@j2n.net>
+ * fr translations
+
 Daichi Kawahata <daichik@users.sourceforge.net>
  * ja translations
