--- a/po/ja.po
+++ b/po/ja.po
@@ -1,23 +1,39 @@
-# Japanese translations for exo package.
-# Copyright (C) 2004-2005, os-cillation.
-# This file is distributed under the same license as the exo package.
+# Japanese translations for libexo package.
+# Copyright (C) 2004-2005 os-cillation e.K.
+# This file is distributed under the same license as the libexo package.
 # Daichi Kawahata <daichik@users.sourceforge.net>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.1svn\n"
+"Project-Id-Version: libexo 0.3.1svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-04-06 12:41+0900\n"
-"PO-Revision-Date: 2005-04-18 15:38+0900\n"
+"POT-Creation-Date: 2005-06-12 02:24+0900\n"
+"PO-Revision-Date: 2005-06-07 00:16+0900\n"
 "Last-Translator: Daichi Kawahata <daichik@users.sourceforge.net>\n"
 "Language-Team: xfce-users-jp <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: exo/exo-ellipsized-label.c:121
+#: exo/exo-cell-renderer-ellipsized-text.c:117 exo/exo-ellipsized-label.c:121
 msgid "Ellipsize"
-msgstr "省略"
+msgstr "中略"
+
+#: exo/exo-cell-renderer-ellipsized-text.c:118
+msgid ""
+"The preferred place to ellipsize the string, if the cell renderer does not "
+"have enough room to display the entire string, if at all"
+msgstr ""
+"セル・レンダラーが全ての文字列を表示するのに十分なスペースが無い場合や、まっ"
+"たく無い場合に文字列を省略する優先箇所です。"
+
+#: exo/exo-cell-renderer-ellipsized-text.c:128
+msgid "Ellipsize set"
+msgstr "中略をセット"
+
+#: exo/exo-cell-renderer-ellipsized-text.c:129
+msgid "Whether this tag affects the ellipsize mode"
+msgstr "このタグが中略モードに影響を及ぼすかどうかを設定します。"
 
 #: exo/exo-ellipsized-label.c:122
 msgid ""
@@ -25,7 +41,7 @@ msgid ""
 "enough room to display the entire string, if at all"
 msgstr ""
 "ラベルが全ての文字列を表示するのに十分なスペースが無い場合や、まったく無い場"
-"合に文字列の好きな箇所を省略します。"
+"合に文字列を省略する優先箇所です。"
 
 #: exo/exo-icon-bar.c:233 exo/exo-icon-view.c:381
 msgid "Orientation"
@@ -33,7 +49,7 @@ msgstr "方向"
 
 #: exo/exo-icon-bar.c:234
 msgid "The orientation of the iconbar"
-msgstr "アイコンバーが延びる方向です"
+msgstr "アイコンバーが延びる方向です。"
 
 #: exo/exo-icon-bar.c:250 exo/exo-icon-view.c:331
 msgid "Pixbuf column"
@@ -41,7 +57,7 @@ msgstr "ピクセルバッファ欄"
 
 #: exo/exo-icon-bar.c:251 exo/exo-icon-view.c:332
 msgid "Model column used to retrieve the icon pixbuf from"
-msgstr "アイコンのピクセルバッファを取得するために使用されるモデル欄です"
+msgstr "アイコンのピクセルバッファを取得するために使用されるモデル欄です。"
 
 #: exo/exo-icon-bar.c:266 exo/exo-icon-view.c:347
 msgid "Text column"
@@ -49,7 +65,7 @@ msgstr "文字欄"
 
 #: exo/exo-icon-bar.c:267 exo/exo-icon-view.c:348
 msgid "Model column used to retrieve the text from"
-msgstr "文字を取得するために使用されるモデル欄です"
+msgstr "文字を取得するために使用されるモデル欄です。"
 
 #: exo/exo-icon-bar.c:279
 msgid "Icon Bar Model"
@@ -57,7 +73,7 @@ msgstr "アイコンバーのモデル"
 
 #: exo/exo-icon-bar.c:280
 msgid "Model for the icon bar"
-msgstr "アイコンバーのためのモデルです"
+msgstr "アイコンバーのためのモデルです。"
 
 #: exo/exo-icon-bar.c:296
 msgid "Active"
@@ -65,19 +81,19 @@ msgstr "アクティブ"
 
 #: exo/exo-icon-bar.c:297
 msgid "Active item index"
-msgstr "アクティブ・アイテムのインデックス"
+msgstr "有効アイテムのインデックス"
 
 #: exo/exo-icon-bar.c:303 exo/exo-icon-bar.c:304
 msgid "Active item fill color"
-msgstr "アクティブ・アイテムの塗潰し色"
+msgstr "有効アイテムの塗潰し色"
 
 #: exo/exo-icon-bar.c:310 exo/exo-icon-bar.c:311
 msgid "Active item border color"
-msgstr "アクティブ・アイテムの枠の色"
+msgstr "有効アイテムの枠の色"
 
 #: exo/exo-icon-bar.c:317 exo/exo-icon-bar.c:318
 msgid "Active item text color"
-msgstr "アクティブ・アイテムの文字色"
+msgstr "有効アイテムの文字色"
 
 #: exo/exo-icon-bar.c:324 exo/exo-icon-bar.c:325
 msgid "Cursor item fill color"
@@ -97,7 +113,7 @@ msgstr "選択モード"
 
 #: exo/exo-icon-view.c:315
 msgid "The selection mode"
-msgstr "選択モードです"
+msgstr "選択モードです。"
 
 #: exo/exo-icon-view.c:365
 msgid "Markup column"
@@ -106,7 +122,7 @@ msgstr "マークアップ欄"
 #: exo/exo-icon-view.c:366
 msgid "Model column used to retrieve the text if using Pango markup"
 msgstr ""
-"Pango のマークアップが使用されている場合に文字を取得するためのモデル欄です"
+"Pango のマークアップが使用されている場合に文字を取得するためのモデル欄です。"
 
 #: exo/exo-icon-view.c:373
 msgid "Icon View Model"
@@ -114,13 +130,14 @@ msgstr "アイコン表示モデル"
 
 #: exo/exo-icon-view.c:374
 msgid "The model for the icon view"
-msgstr "アイコン表示のためのモデルです"
+msgstr "アイコン表示のためのモデルです。"
 
 #: exo/exo-icon-view.c:382
 msgid ""
 "How the text and icon of each item are positioned relative to each other"
 msgstr ""
-"それぞれのアイテムの文字とアイコンがお互いにどの位置に置かれるかを選択します"
+"それぞれのアイテムの文字とアイコンがお互いにどの位置に置かれるかを選択しま"
+"す。"
 
 #: exo/exo-icon-view.c:390
 msgid "Selection Box Color"
@@ -128,7 +145,7 @@ msgstr "選択ボックスの色"
 
 #: exo/exo-icon-view.c:391
 msgid "Color of the selection box"
-msgstr "選択ボックスの色です"
+msgstr "選択ボックスの色です。"
 
 #: exo/exo-icon-view.c:397
 msgid "Selection Box Alpha"
@@ -136,7 +153,23 @@ msgstr "選択ボックスのα値"
 
 #: exo/exo-icon-view.c:398
 msgid "Opacity of the selection box"
-msgstr "選択ボックスの透明度です"
+msgstr "選択ボックスの透明度です。"
+
+#: exo/exo-mime-info.c:122
+msgid "Mime info comment"
+msgstr "MIME 情報コメント"
+
+#: exo/exo-mime-info.c:123
+msgid "The comment gives a better description of the MIME type"
+msgstr "このコメントに MIME タイプのより詳しい説明を記述します。"
+
+#: exo/exo-mime-info.c:137
+msgid "Mime info name"
+msgstr "MIME 情報名"
+
+#: exo/exo-mime-info.c:138
+msgid "The full qualified name of the mime type"
+msgstr "MIME タイプの完全な名前です。"
 
 #: exo/exo-toolbars-editor-dialog.c:107
 msgid "_Add a new toolbar"
@@ -172,11 +205,11 @@ msgstr "文字のみ(_T)"
 
 #: exo/exo-toolbars-view.c:775
 msgid "Text for _All Icons"
-msgstr "全てのアイコンの文字(_A)"
+msgstr "全アイコンに文字を添える(_A)"
 
 #: exo/exo-toolbars-view.c:784
 msgid "Text for I_mportant Icons"
-msgstr "重要なアイコンの文字(_M)"
+msgstr "重要アイコンに文字を添える(_M)"
 
 #: exo/exo-toolbars-view.c:792
 msgid "_Remove Toolbar"
@@ -185,3 +218,19 @@ msgstr "ツールバーを削除(_R)"
 #: exo/exo-toolbars-view.c:807
 msgid "Customize Toolbar..."
 msgstr "ツールバーのカスタマイズ..."
+
+#: exo/exo-xsession-client.c:121
+msgid "Window group"
+msgstr "ウィンドウグループ"
+
+#: exo/exo-xsession-client.c:122
+msgid "Window group leader"
+msgstr "ウィンドウグループのリーダーです。"
+
+#: exo/exo-xsession-client.c:132
+msgid "Restart command"
+msgstr "再起動コマンド"
+
+#: exo/exo-xsession-client.c:133
+msgid "Session restart command"
+msgstr "セッションを再起動するコマンドです。"
