2005-06-24	Benedikt Meurer <benny@xfce.org>
	* exo/xdgmime/xdgmime.c(xdg_mime_remove_callback): Allow to specify
	  NULL for the destroy function.




(Old svn revision: 16591)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-06-24	Benedikt Meurer <benny@xfce.org>
+
+	* exo/xdgmime/xdgmime.c(xdg_mime_remove_callback): Allow to specify
+	  NULL for the destroy function.
+
 2005-06-16	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-config.h.in: Add defines for EXO_PARAM_READABLE,
