2005-07-19	Benedikt Meurer <benny@xfce.org>
	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
	  <daichik@users.sourceforge.net>.




(Old svn revision: 16598)

--- a/po/ja.po
+++ b/po/ja.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: libexo 0.3.1svn\n"
+"Project-Id-Version: libexo 0.3.1svn-r\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-07-02 17:06+0200\n"
-"PO-Revision-Date: 2005-06-07 00:16+0900\n"
+"PO-Revision-Date: 2005-07-18 00:23+0900\n"
 "Last-Translator: Daichi Kawahata <daichik@users.sourceforge.net>\n"
 "Language-Team: xfce-users-jp <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -18,36 +18,36 @@ msgstr ""
 #: exo-csource/main.c:224
 #, c-format
 msgid "Usage: %s [options] [file]\n"
-msgstr ""
+msgstr "使用法: %s [オプション] [ファイル]\n"
 
 #: exo-csource/main.c:225
 #, c-format
 msgid "       %s [options] --build-list [[name file]...]\n"
-msgstr ""
+msgstr "       %s [オプション] --build-list [[名前 ファイル]...]\n"
 
 #: exo-csource/main.c:227
 msgid "  -h, --help        Print this help message and exit\n"
-msgstr ""
+msgstr "  -h, --help        このヘルプメッセージを表示して終了します\n"
 
 #: exo-csource/main.c:228
 msgid "  -v, --version     Print version information and exit\n"
-msgstr ""
+msgstr "  -v, --version     バージョン情報を表示して終了します\n"
 
 #: exo-csource/main.c:229
 msgid "  --extern          Generate extern symbols\n"
-msgstr ""
+msgstr "  --extern          extern シンボルを生成します\n"
 
 #: exo-csource/main.c:230
 msgid "  --static          Generate static symbols\n"
-msgstr ""
+msgstr "  --static          static シンボルを生成します\n"
 
 #: exo-csource/main.c:231
 msgid "  --name=identifier C macro/variable name\n"
-msgstr ""
+msgstr "  --name=identifier C マクロ/変数名\n"
 
 #: exo-csource/main.c:232
 msgid "  --build-list      Parse (name, file) pairs\n"
-msgstr ""
+msgstr "  --build-list      解析する (名前, ファイルの) ペアです\n"
 
 #: exo-csource/main.c:242
 msgid ""
@@ -57,6 +57,11 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
+"Copyright (c) 2005\n"
+"        os-cillation e.K. All rights reserved.\n"
+"\n"
+"Benedikt Meurer <benny@xfce.org> が作成しました。\n"
+"\n"
 
 #: exo-csource/main.c:245
 #, c-format
@@ -67,11 +72,16 @@ msgid ""
 "%s source package.\n"
 "\n"
 msgstr ""
+"%s comes with ABSOLUTELY NO WARRANTY,\n"
+"You may redistribute copies of %s under the terms of\n"
+"the GNU Lesser General Public License which can be found in the\n"
+"%s source package.\n"
+"\n"
 
 #: exo-csource/main.c:249
 #, c-format
 msgid "Please report bugs to <%s>.\n"
-msgstr ""
+msgstr "バグは <%s> に報告して下さい。\n"
 
 #: exo/exo-cell-renderer-ellipsized-text.c:118 exo/exo-ellipsized-label.c:121
 msgid "Ellipsize"
