--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-19	Benedikt Meurer <benny@xfce.org>
+
+	* po/ja.po: Update japanese translations, thanks to Daichi Kawahata
+	  <daichik@users.sourceforge.net>.
+
 2005-07-02	Benedikt Meurer <benny@xfce.org>
 
 	* tests/Makefile.am: Don't assume that srcdir = builddir.
