2005-08-05	Benedikt Meurer <benny@xfce.org>
	* exo/exo-object.h: Reserve two pointers for ExoObject.




(Old svn revision: 16600)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-05	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-object.h: Reserve two pointers for ExoObject.
+
 2005-08-04	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Merge debug support from Thunar. Add check for
