2005-08-14	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Add fi translations to XDT_I18N().
	* po/POTFILES.in: Add missing source files.




(Old svn revision: 16890)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-14	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Add fi translations to XDT_I18N().
+	* po/POTFILES.in: Add missing source files.
+
 2005-08-11	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-object-generic.c, exo/exo-object-i386.S, exo/exo-object.c:
