--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: exo 0.2.1svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-07-02 17:06+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2005-08-17 20:31+0900\n"
 "Last-Translator: Dwayne Bailey <dwayne@translate.org.za>\n"
-"Language-Team: en_GB <LL@li.org>\n"
+"Language-Team: British English <en_gb@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
