--- a/po/fr.po
+++ b/po/fr.po
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: libexo 0.3\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-07-02 17:06+0200\n"
-"PO-Revision-Date: 2005-06-13 13:28+0100\n"
+"PO-Revision-Date: 2005-08-17 20:29+0900\n"
 "Last-Translator: Stephane Roy <sroy@j2n.net>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
