--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,9 @@
+2005-08-17	Daichi Kawahata <daichi@xfce.org>
+
+	* en_GB.po, fr.po: Fixed errors emitted by 'msgfmt -c', added fall
+	  back address at the 'Language-Team: '.
+
 2005-08-13	Daichi Kawahata <daichi@xfce.org>
 
 	* fi.po: Add Finnish translations by Jari Rahkonen
-          <jari.rahkonen@pp1.inet.fi>.
+	  <jari.rahkonen@pp1.inet.fi>.
