--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-18	Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Changed translator's address etc.
+
 2005-08-17	Daichi Kawahata <daichi@xfce.org>
 
 	* en_GB.po, fr.po: Fixed errors emitted by 'msgfmt -c', added fall
