2005-08-19	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Bump the libtool revision number.




(Old svn revision: 17016)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-08-19	Benedikt Meurer <benny@xfce.org>
 
+	* configure.in.in: Bump the libtool revision number.
+
+2005-08-19	Benedikt Meurer <benny@xfce.org>
+
 	* configure.in.in, exo/exo-xsession-client.c: Drop dependency on X11.
 	  Acts as a dummy on other GDK targets.
 	* configure.in.in, docs/reference/Makefile.am, exo/Makefile.am,
