Updated Japanese translations.
(Old svn revision: 17055)

--- a/po/ja.po
+++ b/po/ja.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: libexo 0.3.1svn-r\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-08-19 16:18+0200\n"
-"PO-Revision-Date: 2005-08-16 01:10+0900\n"
+"POT-Creation-Date: 2005-08-20 18:22+0900\n"
+"PO-Revision-Date: 2005-08-20 18:35+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
@@ -177,35 +177,35 @@ msgstr "カーソル・アイテムの文字色"
 
 #: exo/exo-icon-view.c:495
 msgid "Column Spacing"
-msgstr ""
+msgstr "表示欄スペース"
 
 #: exo/exo-icon-view.c:496
 msgid "Space which is inserted between grid column"
-msgstr ""
+msgstr "グリッド欄の間に挟まれるスペースです"
 
 #: exo/exo-icon-view.c:512
 msgid "Number of columns"
-msgstr ""
+msgstr "表示欄の数"
 
 #: exo/exo-icon-view.c:513
 msgid "Number of columns to display"
-msgstr ""
+msgstr "表示する表示欄の数です"
 
 #: exo/exo-icon-view.c:530
 msgid "Width for each item"
-msgstr ""
+msgstr "アイテムの幅"
 
 #: exo/exo-icon-view.c:531
 msgid "The width used for each item"
-msgstr ""
+msgstr "それぞれのアイテムに使用する幅です"
 
 #: exo/exo-icon-view.c:546
 msgid "Margin"
-msgstr ""
+msgstr "余白"
 
 #: exo/exo-icon-view.c:547
 msgid "Space which is inserted at the edges of the icon view"
-msgstr ""
+msgstr "アイテム表示の端に挟まれるスペースです"
 
 #: exo/exo-icon-view.c:563
 msgid "Markup column"
@@ -233,19 +233,19 @@ msgstr ""
 
 #: exo/exo-icon-view.c:625
 msgid "Reorderable"
-msgstr ""
+msgstr "並べ替え可能"
 
 #: exo/exo-icon-view.c:626
 msgid "View is reorderable"
-msgstr ""
+msgstr "表示は並べ替え可能です"
 
 #: exo/exo-icon-view.c:641
 msgid "Row Spacing"
-msgstr ""
+msgstr "行スペース"
 
 #: exo/exo-icon-view.c:642
 msgid "Space which is inserted between grid rows"
-msgstr ""
+msgstr "グリッド行の間に挟まれるスペースです"
 
 #: exo/exo-icon-view.c:656
 msgid "Selection mode"
@@ -257,11 +257,11 @@ msgstr "選択モードです。"
 
 #: exo/exo-icon-view.c:673
 msgid "Spacing"
-msgstr ""
+msgstr "スペース"
 
 #: exo/exo-icon-view.c:674
 msgid "Space which is inserted between cells of an item"
-msgstr ""
+msgstr "アイテムのセルの間に挟まれるスペースです"
 
 #: exo/exo-icon-view.c:701
 msgid "Selection Box Color"
@@ -342,15 +342,3 @@ msgstr "再起動コマンド"
 #: exo/exo-xsession-client.c:139
 msgid "Session restart command"
 msgstr "セッションを再起動するコマンドです。"
-
-#~ msgid "Mime info comment"
-#~ msgstr "MIME 情報コメント"
-
-#~ msgid "The comment gives a better description of the MIME type"
-#~ msgstr "このコメントに MIME タイプのより詳しい説明を記述します。"
-
-#~ msgid "Mime info name"
-#~ msgstr "MIME 情報名"
-
-#~ msgid "The full qualified name of the mime type"
-#~ msgstr "MIME タイプの完全な名前です。"
