--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-23	Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Updated Japanese translations.
+
 2005-08-18	Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Changed translator's address etc.
@@ -9,5 +13,5 @@
 
 2005-08-13	Daichi Kawahata <daichi@xfce.org>
 
-	* fi.po: Add Finnish translations by Jari Rahkonen
+	* fi.po: Added Finnish translations by Jari Rahkonen
 	  <jari.rahkonen@pp1.inet.fi>.
