2005-08-26	Benedikt Meurer <benny@xfce.org>
	* exo/exo-icon-view.c(exo_icon_view_expose_event): No need to setup
	  the clipping for the fill GC, as we'll only draw within the clip
	  region anyways.




(Old svn revision: 17093)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-08-26	Benedikt Meurer <benny@xfce.org>
 
+	* exo/exo-icon-view.c(exo_icon_view_expose_event): No need to setup
+	  the clipping for the fill GC, as we'll only draw within the clip
+	  region anyways.
+
+2005-08-26	Benedikt Meurer <benny@xfce.org>
+
 	* exo/exo-icon-view.c: Allocate the GCs required for drawing the
 	  rubberband selection when the rubberbanding starts and deallocate
 	  them when rubberbanding is done, instead of allocating them for
