2005-08-31	Benedikt Meurer <benny@xfce.org>
	* po/es.po: Update spanish translations, thanks to Patricio Carr
	  <pato@patocarr.com>.




(Old svn revision: 17213)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-31	Benedikt Meurer <benny@xfce.org>
+
+	* po/es.po: Update spanish translations, thanks to Patricio Carr
+	  <pato@patocarr.com>.
+
 2005-08-27	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-bar.c, exo/exo-icon-view.c: Use alloca wrappers
