2005-09-04	Benedikt Meurer <benny@xfce.org>
	* exo/exo-icon-view.c(find_item_page_up_down): Fix Page_Up handling.




(Old svn revision: 17332)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-04	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(find_item_page_up_down): Fix Page_Up handling.
+
 2005-09-03	Benedikt Meurer <benny@xfce.org>
 
 	* exo-csource/main.c(print_csource): Fix a small bug for platforms,
