--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,17 +1,25 @@
-2005-08-23	Daichi Kawahata <daichi@xfce.org>
+2005-09-24  Daichi Kawahata <daichi@xfce.org>
+
+	* ja.po: Added "$Id$" at the initial comment.
+	* ChangeLog: Style change so that Emacs also can color this file
+	  correctly.
+
+2005-08-23  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Updated Japanese translations.
 
-2005-08-18	Daichi Kawahata <daichi@xfce.org>
+2005-08-18  Daichi Kawahata <daichi@xfce.org>
 
 	* ja.po: Changed translator's address etc.
 
-2005-08-17	Daichi Kawahata <daichi@xfce.org>
+2005-08-17  Daichi Kawahata <daichi@xfce.org>
 
 	* en_GB.po, fr.po: Fixed errors emitted by 'msgfmt -c', added fall
 	  back address at the 'Language-Team: '.
 
-2005-08-13	Daichi Kawahata <daichi@xfce.org>
+2005-08-13  Daichi Kawahata <daichi@xfce.org>
 
 	* fi.po: Added Finnish translations by Jari Rahkonen
 	  <jari.rahkonen@pp1.inet.fi>.
+
+# vi:set ts=8 sw=8 noet ai nocindent:
