* Modified initial header strings using template by "msginit".
* Modified initial comment strings using template by "msginit".


(Old svn revision: 18165)

--- a/po/ja.po
+++ b/po/ja.po
@@ -1,16 +1,16 @@
 # $Id$
 #
-# Japanese translations for libexo package.
+# Japanese translations for exo package.
 # Copyright (C) 2004-2005 os-cillation e.K.
-# This file is distributed under the same license as the libexo package.
+# This file is distributed under the same license as the exo package.
 # Daichi Kawahata <daichi@xfce.org>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: libexo 0.3.1svn-r\n"
+"Project-Id-Version: exo 0.3.1svn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-09-14 04:39+0900\n"
-"PO-Revision-Date: 2005-08-20 18:35+0900\n"
+"POT-Creation-Date: 2005-10-10 01:41+0900\n"
+"PO-Revision-Date: 2005-10-10 01:45+0900\n"
 "Last-Translator: Daichi Kawahata <daichi@xfce.org>\n"
 "Language-Team: Japanese <xfce-users-jp@ml.fdiary.net>\n"
 "MIME-Version: 1.0\n"
