--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,8 @@
 2005-10-10  Daichi Kawahata <daichi@xfce.org>
 
 	* POTFILES.in: Removed non-existence file.
-	* de.po en_GB.po es.po fi.po fr.po ja.po: Modified initial header,
-	  comment strings using template by "msginit".
+	* de.po, en_GB.po, es.po, fi.po, fr.po, ja.po: Modified initial
+	  header, comment strings using template by "msginit".
 
 2005-09-24  Daichi Kawahata <daichi@xfce.org>
 
